= Version History =

2.8 (2013-10-31):

- added: option to allow group members to invite more members
- added: Portuguese-Brazilian translation (thanks to brunovb)
- added: tags to quickstart discussion widget
- added: suggested groups (based on profile information)
- added: group admins are notified upon membership request #31 (thanks to Matt Beckett)
- fixed: crash when listing a forum topic of a hidden group
- fixed: email invites are not cleaned up on register
- fixed: group owner should not be group admin #26
- changed: better group selection in quickstart discussion widget
- changed: showing group status (open/closed) is a plugin setting #3
- changed: group index widget to include popular groups option #28

2.7 (2013-06-27):

- added: status icon when discussion is closed and fast action to close/open a topic
- added: a widget to quickly start a discussion (index, dashboard and group context)
- fixed: no tab selected in group listing when group_tools is first activated
- fixed: group admin transfer no longer working for non admins
- changed: performance improvement in group admin transfer
- changed: discussion list now shows in which group the discussion takes place (if not already clear)

2.6 (2013-05-06):

- added: option to hide the My Status sidebar
- fixed: using new cache functions
- changed: index groups widget now optionally respects group ordering

2.5 (2013-04-05):

- added: auto join groups based on email invitation when joining the site
- added: different group ACL fixes
- fixed: problem with email invites from hidden groups
- fixed: in some cases email invites weren't saved
- changed: auto notifications now listen to $NOTIFICATION_HANDLERS
- changed: handling of invitations page
- changed: layout of actions
- removed: group creation limited to admins (Elgg core now offers this option)

2.4 (2012-11-06):

- added: filter groups based on a tag field in index_group widget